--- a/.gitignore
+++ b/.gitignore
@@ -99,5 +99,5 @@ ENV/
 .pytest_cache/
 
 # data
-simulations/traj_processed
-simulations/traj_raw
+simulations/traj_processed/
+simulations/traj_raw/
