--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,11 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: softmaxltd/lipids-comparison-base
+      - image: softmaxltd/lipids-comparison-base:0.0.1
     steps:
       - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run:
           name: Run Tests
           command: |
