--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,4 +12,4 @@ jobs:
       - run:
           name: Run Tests
           command: |
-            pytest lipids-comparison/scripts/tools/tests/
+            pytest scripts/tools/tests/
