--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,9 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: softmaxltd/lipids-comparison-base:0.0.1
+      - image: softmaxltd/lipids-comparison-base:base
     steps:
       - checkout
-      - run:
-          name: List
-          command: ls
       - run:
           name: Run Tests
           command: |
