--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,12 @@
 version: 2.1
 
-orbs:
-  python: circleci/python@0.2.1
-
 jobs:
-  build-and-test:
-    executor: python/default
+  build:
+    docker:
+      - image: softmaxltd/lipids-comparison:base
     steps:
       - checkout
-      - python/load-cache
-      - python/install-deps
-      - python/save-cache
       - run:
-          command: ./manage.py test
-          name: Test
-
-workflows:
-  main:
-    jobs:
-      - build-and-test
+          name: Run Tests
+          command: |
+            pytest scripts/tools/tests/
