--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -2,7 +2,7 @@ FROM continuumio/miniconda3:4.7.12
 
 ENV CONDA_ENV_PREFIX /opt/conda/envs/lipids
 ENV PATH ${CONDA_ENV_PREFIX}/bin:$PATH
-ENV LD_LIBRARY_PATH ${CONDA_ENV_PREFIX}/lib:$LD_LIBRARY_PATH
+# ENV LD_LIBRARY_PATH ${CONDA_ENV_PREFIX}/lib:$LD_LIBRARY_PATH
 
 USER root
 
@@ -20,10 +20,14 @@ RUN conda env create --file /environment.yml \
 RUN echo "source activate lipids" > ~/.bashrc \
     && mkdir /home/lipids 
 
+WORKDIR /home/lipids
+
 RUN git clone https://github.com/mariaderrico/DPA.git \
     && cd DPA \
-    && python setup.py develop
-
-WORKDIR /home/lipids
+    && python setup.py install \
+    && cd Pipeline \
+    && f2py -c NRmaxL.f90 -m NR \
+    && easycython _DPA.pyx \
+    && easycython _PAk.pyx 
 
 CMD [ "/bin/bash" ]
